--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,3 +1,4 @@
-<div>
-  {{user.id}} -- {{user.name}} -- {{user.username}} -- {{user.email}}
+<div class="user">
+  <div>{{user.id}} -- {{user.name}}</div>
+  <a [routerLink]="[user.id]" [state]="user">details...</a>
 </div>
