--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,1 +1,12 @@
-<app-comment *ngFor="let comment of comments" [comment]="comment"></app-comment>
+
+<div class="container">
+  <div class="comments">
+    <h3>All comments</h3>
+    <div class="comment">
+      <app-comment *ngFor="let comment of comments" [comment]="comment"></app-comment>
+    </div>
+  </div>
+  <div class="commentDetails">
+    <router-outlet></router-outlet>
+  </div>
+</div>
