--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,1 +1,11 @@
-<app-post *ngFor="let post of posts" [post]="post"></app-post>
+<div class="container">
+  <div class="posts">
+    <h3>All posts</h3>
+    <div class="post">
+      <app-post *ngFor="let post of posts" [post]="post"></app-post>
+    </div>
+  </div>
+  <div class="postDetails">
+    <router-outlet></router-outlet>
+  </div>
+</div>
