--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,1 +1,12 @@
-<app-user *ngFor="let user of users" [user]="user"></app-user>
+<div class="container">
+  <div class="users">
+    <h3>All users</h3>
+    <div class="user">
+      <app-user *ngFor="let user of users" [user]="user"></app-user>
+    </div>
+  </div>
+  <div class="userDetails">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
